make topics link to practice

--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
     <div class="content">
       <img src="logo.png" alt="CLI Prompt" class="logo">
       <div class="title">CLI First Principles</div>
-      <div class="text">Start learning the basics of the Command Line Interface, otherwise known as <em>the terminal</em>.</div>
+      <div class="text">Learn the basics of the Command Line Interface, or plainly.. <em><strong>the terminal</strong></em>.</div>
     </div>
   </header>
   <!-- services -->
   <section class="services">
     <div class="container grid-3 center">
-      <div>
-        <i class="fas fa-terminal fa-3x" aria-hidden="true"></i>
-        <h3>Commands</h3>
-        <p>It's important to remember these 22 terminal commands:</p>
-        <!-- <p><strong>pwd</strong> print working directory</p>
+
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="fas fa-terminal fa-3x" aria-hidden="true"></i>
+          <h3>Commands</h3>
+          <!-- <p><strong>pwd</strong> print working directory</p>
           <p><strong>hostname</strong> my computer's network name</p>
           <p><strong>mkdir</strong> make directory</p>
           <p><strong>cd</strong> change directory</p>
@@ -48,63 +49,85 @@
           <p><strong>export</strong> export/set a new environment variable</p>
           <p><strong>exit</strong> exit the shell</p>
           <p><strong>sudo</strong> DANGER! become Super user root DANGER!</p> -->
-      </div>
-      <div>
-        <i class="fas fa-sitemap fa-3x" aria-hidden="true"></i>
-        <h3>Paths Folders Directories (pwd)</h3>
-      </div>
-      <div>
-        <i class="fas fa-folder fa-3x" aria-hidden="true"></i>
-        <h3>Make a Directory (mkdir)</h3>
-      </div>
-      <div>
-        <i class="fas fa-exchange-alt fa-3x" aria-hidden="true"></i>
-        <h3>Change Directory (cd)</h3>
-      </div>
+        </div>
+      </a>
+
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="fas fa-sitemap fa-3x" aria-hidden="true"></i>
+          <h3>Paths Folders Directories (pwd)</h3>
+        </div>
+      </a>
+
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="fas fa-folder fa-3x" aria-hidden="true"></i>
+          <h3>Make a Directory (mkdir)</h3>
+        </div>
+      </a>
+
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <div>
+            <i class="fas fa-exchange-alt fa-3x" aria-hidden="true"></i>
+            <h3>Change Directory (cd)</h3>
+          </div>
+      </a>
+
       <div>
         <i class="fas fa-list-ol fa-3x" aria-hidden="true"></i>
         <h3>List Directory (ls)</h3>
       </div>
+
       <div>
         <i class="fas fa-folder-minus fa-3x" aria-hidden="true"></i>
         <h3>Remove Directory (rmdir)</h3>
       </div>
+
       <div>
         <i class="fas fa-arrows-alt fa-3x" aria-hidden="true"></i>
         <h3>Moving Around (pushd, popd)</h3>
       </div>
+
       <div>
         <i class="far fa-file fa-3x" aria-hidden="true"></i>
         <h3>Making Empty Files (touch/New-Item)</h3>
       </div>
+
       <div>
         <i class="far fa-copy fa-3x" aria-hidden="true"></i>
         <h3>Copy a File (cp)</h3>
       </div>
+
       <div>
         <i class="fas fa-truck-moving fa-3x" aria-hidden="true"></i>
         <h3>Moving a File (mv)</h3>
       </div>
+
       <div>
         <i class="fas fa-eye fa-3x" aria-hidden="true"></i>
         <h3>View a File (less/more)</h3>
       </div>
+
       <div>
         <i class="fas fa-stream fa-3x" aria-hidden="true"></i>
         <h3>Stream a File (cat)</h3>
       </div>
+
       <div>
         <i class="far fa-trash-alt fa-3x" aria-hidden="true"></i>
         <h3>Removing a File (rm)</h3>
       </div>
+
       <div>
         <i class="fas fa-external-link-alt fa-3x" aria-hidden="true"></i>
         <h3>Exiting your Terminal (exit)</h3>
       </div>
+
       <div>
         <i class="fas fa-info fa-3x" aria-hidden="true"></i>
         <h3>Command Line Next Steps</h3>
       </div>
+
     </div>
   </section>
 
@@ -112,19 +135,20 @@
     <div class="container">
       <div class="grid-2">
         <div class="center">
-          <i class="fab fa-github fa-10x"></i>
+          <a href="https://github.com/andy-young/CLI-First-Principles" target="_blank"><i class="fab fa-github fa-10x"></i></a>
         </div>
         <div>
           <h3>About Me</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde aperiam sint consequuntur inventore rem qui
-            dignissimos eveniet alias cumque asperiores!</p>
+          <p>My name is Andy Young and I'm a self taught programmer. I currently reside in Lakewood, Colorado.</p>
         </div>
       </div>
     </div>
   </section>
 
   <footer class="center bg-dark">
-    <p>atydev.com 2018</p>
+    <a href="https:/atydev.com/" target="_blank">
+      <p style="color: white">atydev.com</p>
+    </a>
   </footer>
 </body>
 
