create initial js functionality

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <section class="services">
     <div class="container grid-3 center">
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
+      <a href="commands.html" target="_blank" rel="noopener noreferrer">
         <div>
           <i class="fas fa-terminal fa-3x" aria-hidden="true"></i>
           <h3>Commands</h3>
