make MVP, contiue bug fixing

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="commands.html" target="_blank" rel="noopener noreferrer">
         <div>
           <i class="fas fa-terminal fa-3x" aria-hidden="true"></i>
-          <h3>Commands</h3>
+          <h3>Learn Commands</h3>
           <!-- <p><strong>pwd</strong> print working directory</p>
           <p><strong>hostname</strong> my computer's network name</p>
           <p><strong>mkdir</strong> make directory</p>
