--- a/commands.html
+++ b/commands.html
@@ -44,9 +44,9 @@
           <div class="col-md-12">
             <div class="card card-body bg-secondary text-white">
               <h5>Instructions</h5>
-              <p>For each definition, type the correct corresponding command in the given amount of seconds to score. To play again, just type the current word.
+              <p>For each definition, type the correct command before the timer runs out. To play again, just type the correct command.
                 Your score
-                will reset</p>
+                will reset.</p>
             </div>
           </div>
         </div>
