test if favicon work at URL

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-    crossorigin="anonymous">
+  crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="https://andy-young.github.io/CLI-First-Principles/favicon.ico" type="image/x-icon">
   <title>CLI First Principles</title>
 </head>
 
@@ -68,9 +69,9 @@
 
       <a href="http://" target="_blank" rel="noopener noreferrer">
         <div>
-            <i class="fas fa-exchange-alt fa-3x" aria-hidden="true"></i>
-            <h3>Change Directory (cd)</h3>
-          </div>
+          <i class="fas fa-exchange-alt fa-3x" aria-hidden="true"></i>
+          <h3>Change Directory (cd)</h3>
+        </div>
       </a>
 
       <div>
