--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
   crossorigin="anonymous">
+  <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://andy-young.github.io/CLI-First-Principles/favicon.ico" type="image/x-icon">
   <title>CLI First Principles</title>
 </head>
 
