--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   </section>
 
   <footer class="center bg-dark">
-    <a href="https:/atydev.com/" target="_blank">
+    <a href="https://andy-young.github.io/portfolio/" target="_blank">
       <p style="color: white">atydev.com</p>
     </a>
   </footer>
