--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-  crossorigin="anonymous">
+    crossorigin="anonymous">
   <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
   <link rel="stylesheet" href="style.css">
   <title>CLI First Principles</title>
@@ -15,118 +15,97 @@
 <body>
   <header class="showcase">
     <div class="content">
-      <img src="logo.png" alt="CLI Prompt" class="logo">
+      <a href="commands.html" target="_blank" rel="noopener noreferrer"><img src="logo.png" alt="CLI Prompt" class="logo"></a>
       <div class="title">CLI First Principles</div>
-      <div class="text">Learn the basics of the Command Line Interface, or plainly.. <em><strong>the terminal</strong></em>.</div>
+      <div class="text">Learn the Command Line Interface, <em><strong>master the terminal</strong></em>.</div>
     </div>
   </header>
   <!-- services -->
   <section class="services">
     <div class="container grid-3 center">
 
-      <a href="commands.html" target="_blank" rel="noopener noreferrer">
+      <a href="http://" target="_blank" rel="noopener noreferrer">
         <div>
-          <i class="fas fa-terminal fa-3x" aria-hidden="true"></i>
-          <h3>Learn Commands</h3>
-          <!-- <p><strong>pwd</strong> print working directory</p>
-          <p><strong>hostname</strong> my computer's network name</p>
-          <p><strong>mkdir</strong> make directory</p>
-          <p><strong>cd</strong> change directory</p>
-          <p><strong>ls</strong> list directory</p>
-          <p><strong>rmdir</strong> remove a directory</p>
-          <p><strong>pushd</strong> push a directory</p>
-          <p><strong>popd</strong> pop a directory</p>
-          <p><strong>cp</strong> copy a file or directory</p>
-          <p><strong>mv</strong> move a file or directory</p>
-          <p><strong>less</strong> page throught a file</p>
-          <p><strong>cat</strong> print the whole file</p>
-          <p><strong>xargs</strong> execute arguments</p>
-          <p><strong>find</strong> find files</p>
-          <p><strong>grep</strong> find things inside files</p>
-          <p><strong>man</strong> read a manual page</p>
-          <p><strong>apropos</strong> find which manual is appropriate</p>
-          <p><strong>env</strong> look at your environment</p>
-          <p><strong>echo</strong> print some args</p>
-          <p><strong>export</strong> export/set a new environment variable</p>
-          <p><strong>exit</strong> exit the shell</p>
-          <p><strong>sudo</strong> DANGER! become Super user root DANGER!</p> -->
+          <i class="fas fa-cogs fa-3x" aria-hidden="true"></i>
+          <h3>1. Setup</h3>
         </div>
       </a>
 
       <a href="http://" target="_blank" rel="noopener noreferrer">
         <div>
           <i class="fas fa-sitemap fa-3x" aria-hidden="true"></i>
-          <h3>Paths Folders Directories (pwd)</h3>
+          <h3>2. Paths Folders Directories (pwd)</h3>
         </div>
       </a>
+
 
       <a href="http://" target="_blank" rel="noopener noreferrer">
         <div>
           <i class="fas fa-folder fa-3x" aria-hidden="true"></i>
-          <h3>Make a Directory (mkdir)</h3>
+          <h3>3. Make a Directory (mkdir)</h3>
         </div>
       </a>
 
       <a href="http://" target="_blank" rel="noopener noreferrer">
         <div>
           <i class="fas fa-exchange-alt fa-3x" aria-hidden="true"></i>
-          <h3>Change Directory (cd)</h3>
+          <h3>4. Change Directory (cd)</h3>
         </div>
       </a>
 
       <div>
         <i class="fas fa-list-ol fa-3x" aria-hidden="true"></i>
-        <h3>List Directory (ls)</h3>
+        <h3>5. List Directory (ls)</h3>
       </div>
 
       <div>
         <i class="fas fa-folder-minus fa-3x" aria-hidden="true"></i>
-        <h3>Remove Directory (rmdir)</h3>
+        <h3>6. Remove Directory (rmdir)</h3>
       </div>
 
       <div>
         <i class="fas fa-arrows-alt fa-3x" aria-hidden="true"></i>
-        <h3>Moving Around (pushd, popd)</h3>
+        <h3>7. Moving Around (pushd, popd)</h3>
       </div>
 
       <div>
         <i class="far fa-file fa-3x" aria-hidden="true"></i>
-        <h3>Making Empty Files (touch/New-Item)</h3>
+        <h3>8. Making Empty Files (touch/New-Item)</h3>
       </div>
 
       <div>
         <i class="far fa-copy fa-3x" aria-hidden="true"></i>
-        <h3>Copy a File (cp)</h3>
+        <h3>9. Copy a File (cp)</h3>
       </div>
 
       <div>
         <i class="fas fa-truck-moving fa-3x" aria-hidden="true"></i>
-        <h3>Moving a File (mv)</h3>
+        <h3>10. Moving a File (mv)</h3>
       </div>
 
       <div>
         <i class="fas fa-eye fa-3x" aria-hidden="true"></i>
-        <h3>View a File (less/more)</h3>
+        <h3>11. View a File (less/more)</h3>
       </div>
 
       <div>
         <i class="fas fa-stream fa-3x" aria-hidden="true"></i>
-        <h3>Stream a File (cat)</h3>
+        <h3>12. Stream a File (cat)</h3>
       </div>
 
       <div>
         <i class="far fa-trash-alt fa-3x" aria-hidden="true"></i>
-        <h3>Removing a File (rm)</h3>
+        <h3>13. Removing a File (rm)</h3>
       </div>
 
       <div>
         <i class="fas fa-external-link-alt fa-3x" aria-hidden="true"></i>
-        <h3>Exiting your Terminal (exit)</h3>
+        <h3>14. Exiting your Terminal (exit)</h3>
       </div>
 
       <div>
         <i class="fas fa-info fa-3x" aria-hidden="true"></i>
-        <h3>Command Line Next Steps</h3>
+        <h3>15. Command Line Next Steps</h3>
       </div>
 
     </div>
