Add html page templates & create topic md files.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section class="services">
     <div class="container grid-3 center">
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
+      <a href="lessons/setup.html" target="_blank" rel="noopener noreferrer">
         <div>
           <i class="fas fa-cogs fa-3x" aria-hidden="true"></i>
           <h3>1. Setup</h3>
@@ -34,7 +34,7 @@
       <a href="http://" target="_blank" rel="noopener noreferrer">
         <div>
           <i class="fas fa-sitemap fa-3x" aria-hidden="true"></i>
-          <h3>2. Paths Folders Directories (pwd)</h3>
+          <h3>2. Paths, Folders, Directories (pwd)</h3>
         </div>
       </a>
 
