--- a/lessons/setup.html
+++ b/lessons/setup.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="shortcut icon" type="image/png" href="../images/favicon.ico">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
@@ -12,35 +13,48 @@
 </head>
 
 <body>
-    <div class="card-panel teal lighten-2 center-align"><h2>The Setup</h2></div>
+  <div class="card-panel teal lighten-2 center-align">
+    <h2>The Setup</h2>
+  </div>
 
-    <div class="row">
-    <div class="col s12">
+  <div class="row">
+    <div class="col s10 offset-s1">
       <script src="https://gist.github.com/andy-young/7e18d6206f210ca2faeb20c50fff6bc8.js"></script>
     </div>
   </div>
 
   <ul class="pagination center-align">
-      <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-      <li class="active"><a href="#!">1</a></li>
-      <li class="waves-effect"><a href="#!">2</a></li>
-      <li class="waves-effect"><a href="#!">3</a></li>
-      <li class="waves-effect"><a href="#!">4</a></li>
-      <li class="waves-effect"><a href="#!">5</a></li>
-      <li class="waves-effect"><a href="#!">6</a></li>
-      <li class="waves-effect"><a href="#!">7</a></li>
-      <li class="waves-effect"><a href="#!">8</a></li>
-      <li class="waves-effect"><a href="#!">9</a></li>
-      <li class="waves-effect"><a href="#!">10</a></li>
-      <li class="waves-effect"><a href="#!">11</a></li>
-      <li class="waves-effect"><a href="#!">12</a></li>
-      <li class="waves-effect"><a href="#!">13</a></li>
-      <li class="waves-effect"><a href="#!">14</a></li>
-      <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
-    </ul>
+    <li class="disabled"><a href="next-steps.html"><i class="material-icons">chevron_left</i></a></li>
+    <li class="active"><a href="setup.html">1</a></li>
+    <li class="waves-effect"><a href="pwd.html">2</a></li>
+    <li class="waves-effect"><a href="mkdir.html">3</a></li>
+    <li class="waves-effect"><a href="cd.html">4</a></li>
+    <li class="waves-effect"><a href="ls.html">5</a></li>
+    <li class="waves-effect"><a href="rmdir.html">6</a></li>
+    <li class="waves-effect"><a href="pushd-popd.html">7</a></li>
+    <li class="waves-effect"><a href="touch.html">8</a></li>
+    <li class="waves-effect"><a href="cp.html">9</a></li>
+    <li class="waves-effect"><a href="mv.html">10</a></li>
+    <li class="waves-effect"><a href="less-more.html">11</a></li>
+    <li class="waves-effect"><a href="cat.html">12</a></li>
+    <li class="waves-effect"><a href="rm.html">13</a></li>
+    <li class="waves-effect"><a href="exit.html">14</a></li>
+    <li class="waves-effect"><a href="next-steps.html">15</a></li>
+    <li class="waves-effect"><a href="pwd.html"><i class="material-icons">chevron_right</i></a></li>
+  </ul>
 
   <!--JavaScript at end of body for optimized loading-->
   <script type="text/javascript" src="../materialize/js/materialize.min.js"></script>
 </body>
+
+<footer class="page-footer teal lighten-2">
+  <div class="footer-copyright">
+    <div class="container">
+      <a class="grey-text text-lighten-4 left" href="https://andy-young.github.io/CLI-First-Principles/">CLI Home</a>
+      <a class="grey-text text-lighten-4 right" href="https://andy-young.github.io/CLI-First-Principles/commands.html">CLI
+        Trainer</a>
+    </div>
+  </div>
+</footer>
 
 </html>
