Polish up template styles for lesson pages.

--- a/lessons/setup.html
+++ b/lessons/setup.html
@@ -17,7 +17,7 @@
     <h2>The Setup</h2>
   </div>
 
-  <div class="row">
+  <div class="row card-panel blue-grey lighten-3">
     <div class="col s10 offset-s1">
       <script src="https://gist.github.com/andy-young/7e18d6206f210ca2faeb20c50fff6bc8.js"></script>
     </div>
