Complete ex02 page.

--- a/lessons/pwd.html
+++ b/lessons/pwd.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="shortcut icon" type="image/png" href="../images/favicon.ico">
+  <link rel="shortcut icon" type="image/png" href="../images/favicon.ico">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
@@ -14,12 +14,12 @@
 
 <body>
   <div class="card-panel teal lighten-2 center-align">
-    <h2>Paths, Folders, Directories</h2>
+    <h2>Paths, Folders, Directories (pwd)</h2>
   </div>
 
-  <div class="row">
-    <div class="col s12">
-      <script src="https://gist.github.com/andy-young/7e18d6206f210ca2faeb20c50fff6bc8.js"></script>
+  <div class="row card-panel blue-grey lighten-3">
+    <div class="col s10 offset-s1">
+        <script src="https://gist.github.com/andy-young/bb33dd923393e255ae7e1d9bfad5e1d5.js"></script>
     </div>
   </div>
 
@@ -40,11 +40,21 @@
     <li class="waves-effect"><a href="rm.html">13</a></li>
     <li class="waves-effect"><a href="exit.html">14</a></li>
     <li class="waves-effect"><a href="next-steps.html">15</a></li>
-    <li class="waves-effect"><a href="mkdir.html"><i class="material-icons">chevron_right</i></a></li>
+    <li class="waves-effect"><a href="pwd.html"><i class="material-icons">chevron_right</i></a></li>
   </ul>
 
   <!--JavaScript at end of body for optimized loading-->
   <script type="text/javascript" src="../materialize/js/materialize.min.js"></script>
 </body>
+
+<footer class="page-footer teal lighten-2">
+  <div class="footer-copyright">
+    <div class="container">
+      <a class="grey-text text-lighten-4 left" href="https://andy-young.github.io/CLI-First-Principles/">CLI Home</a>
+      <a class="grey-text text-lighten-4 right" href="https://andy-young.github.io/CLI-First-Principles/commands.html">CLI
+        Trainer</a>
+    </div>
+  </div>
+</footer>
 
 </html>
