--- a/lessons/ls.html
+++ b/lessons/ls.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="shortcut icon" type="image/png" href="../images/favicon.ico">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
@@ -13,18 +14,18 @@
 
 <body>
   <div class="card-panel teal lighten-2 center-align">
-    <h2>The Setup</h2>
+    <h2></h2>
   </div>
 
-  <div class="row">
-    <div class="col s12">
-      <script src="https://gist.github.com/andy-young/7e18d6206f210ca2faeb20c50fff6bc8.js"></script>
+  <div class="row card-panel blue-grey lighten-3">
+    <div class="col s10 offset-s1">
+      <script src=""></script>
     </div>
   </div>
 
   <ul class="pagination center-align">
     <li class="disabled"><a href="next-steps.html"><i class="material-icons">chevron_left</i></a></li>
-    <li class="active"><a href="#!">1</a></li>
+    <li class="active"><a href="setup.html">1</a></li>
     <li class="waves-effect"><a href="pwd.html">2</a></li>
     <li class="waves-effect"><a href="mkdir.html">3</a></li>
     <li class="waves-effect"><a href="cd.html">4</a></li>
@@ -45,5 +46,15 @@
   <!--JavaScript at end of body for optimized loading-->
   <script type="text/javascript" src="../materialize/js/materialize.min.js"></script>
 </body>
+
+<footer class="page-footer teal lighten-2">
+  <div class="footer-copyright">
+    <div class="container">
+      <a class="grey-text text-lighten-4 left" href="https://andy-young.github.io/CLI-First-Principles/">CLI Home</a>
+      <a class="grey-text text-lighten-4 right" href="https://andy-young.github.io/CLI-First-Principles/commands.html">CLI
+        Trainer</a>
+    </div>
+  </div>
+</footer>
 
 </html>
