Complete ex03 page and add emojis.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
       </a>
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
+      <a href="lessons/pwd.html" target="_blank" rel="noopener noreferrer">
         <div>
           <i class="fas fa-sitemap fa-3x" aria-hidden="true"></i>
           <h3>2. Paths, Folders, Directories (pwd)</h3>
@@ -39,74 +39,105 @@
       </a>
 
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
+      <a href="lessons/mkdir.html" target="_blank" rel="noopener noreferrer">
         <div>
           <i class="fas fa-folder fa-3x" aria-hidden="true"></i>
           <h3>3. Make a Directory (mkdir)</h3>
         </div>
       </a>
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
+      <a href="lessons/cd.html" target="_blank" rel="noopener noreferrer">
         <div>
           <i class="fas fa-exchange-alt fa-3x" aria-hidden="true"></i>
           <h3>4. Change Directory (cd)</h3>
         </div>
       </a>
 
-      <div>
-        <i class="fas fa-list-ol fa-3x" aria-hidden="true"></i>
-        <h3>5. List Directory (ls)</h3>
-      </div>
+      <a href="lessons/ls.html" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="fas fa-list-ol fa-3x" aria-hidden="true"></i>
+          <h3>5. List Directory (ls)</h3>
+        </div>
+      </a>
 
-      <div>
-        <i class="fas fa-folder-minus fa-3x" aria-hidden="true"></i>
-        <h3>6. Remove Directory (rmdir)</h3>
-      </div>
+      <a href="lessons/rmdir.html" target="_blank" rel="noopener noreferrer">
+        <div>
+            <i class="fas fa-folder-minus fa-3x" aria-hidden="true"></i>
+            <h3>6. Remove Directory (rmdir)</h3>
+          </div>
+      </a>
 
-      <div>
-        <i class="fas fa-arrows-alt fa-3x" aria-hidden="true"></i>
-        <h3>7. Moving Around (pushd, popd)</h3>
-      </div>
 
-      <div>
-        <i class="far fa-file fa-3x" aria-hidden="true"></i>
-        <h3>8. Making Empty Files (touch/New-Item)</h3>
-      </div>
+      <a href="lessons/pushd-popd.html" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="fas fa-arrows-alt fa-3x" aria-hidden="true"></i>
+          <h3>7. Moving Around (pushd, popd)</h3>
+        </div>
+      </a>
 
-      <div>
-        <i class="far fa-copy fa-3x" aria-hidden="true"></i>
-        <h3>9. Copy a File (cp)</h3>
-      </div>
 
-      <div>
-        <i class="fas fa-truck-moving fa-3x" aria-hidden="true"></i>
-        <h3>10. Moving a File (mv)</h3>
-      </div>
+      <a href="lessons/touch.html" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="far fa-file fa-3x" aria-hidden="true"></i>
+          <h3>8. Making Empty Files (touch/New-Item)</h3>
+        </div>
+      </a>
 
-      <div>
-        <i class="fas fa-eye fa-3x" aria-hidden="true"></i>
-        <h3>11. View a File (less/more)</h3>
-      </div>
 
-      <div>
-        <i class="fas fa-stream fa-3x" aria-hidden="true"></i>
-        <h3>12. Stream a File (cat)</h3>
-      </div>
+      <a href="lessons/cp.html" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="far fa-copy fa-3x" aria-hidden="true"></i>
+          <h3>9. Copy a File (cp)</h3>
+        </div>
+      </a>
 
-      <div>
-        <i class="far fa-trash-alt fa-3x" aria-hidden="true"></i>
-        <h3>13. Removing a File (rm)</h3>
-      </div>
 
-      <div>
-        <i class="fas fa-external-link-alt fa-3x" aria-hidden="true"></i>
-        <h3>14. Exiting your Terminal (exit)</h3>
-      </div>
+      <a href="lessons/mv.html" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="fas fa-truck-moving fa-3x" aria-hidden="true"></i>
+          <h3>10. Moving a File (mv)</h3>
+        </div>
+      </a>
 
-      <div>
-        <i class="fas fa-info fa-3x" aria-hidden="true"></i>
-        <h3>15. Command Line Next Steps</h3>
-      </div>
+
+      <a href="lessons/less-more.html" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="fas fa-eye fa-3x" aria-hidden="true"></i>
+          <h3>11. View a File (less/more)</h3>
+        </div>
+      </a>
+
+
+      <a href="lessons/cat.html" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="fas fa-stream fa-3x" aria-hidden="true"></i>
+          <h3>12. Stream a File (cat)</h3>
+        </div>
+      </a>
+
+
+      <a href="lessons/rm.html" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="far fa-trash-alt fa-3x" aria-hidden="true"></i>
+          <h3>13. Removing a File (rm)</h3>
+        </div>
+      </a>
+
+
+      <a href="lessons/exit.html" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="fas fa-external-link-alt fa-3x" aria-hidden="true"></i>
+          <h3>14. Exiting your Terminal (exit)</h3>
+        </div>
+      </a>
+
+
+      <a href="lessons/next-steps.html" target="_blank" rel="noopener noreferrer">
+        <div>
+          <i class="fas fa-info fa-3x" aria-hidden="true"></i>
+          <h3>15. Command Line Next Steps</h3>
+        </div>
+      </a>
 
     </div>
   </section>
