--- a/lessons/mkdir.html
+++ b/lessons/mkdir.html
@@ -14,12 +14,12 @@
 
 <body>
   <div class="card-panel teal lighten-2 center-align">
-    <h2></h2>
+    <h2>Make A Directory (mkdir)</h2>
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
     <div class="col s10 offset-s1">
-      <script src=""></script>
+      <script src="https://gist.github.com/andy-young/02b06c2342570cf2cd2b2b1476177ec6.js"></script>
     </div>
   </div>
 
