--- a/lessons/rmdir.html
+++ b/lessons/rmdir.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="card-panel teal lighten-2 center-align">
-    <h2></h2>
+    <h2>Remove Directory (rmdir)</h2>
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
