--- a/lessons/touch.html
+++ b/lessons/touch.html
@@ -19,7 +19,7 @@
 
   <div class="row card-panel blue-grey lighten-3">
     <div class="col s10 offset-s1">
-      <script src=""></script>
+      <script src="https://gist.github.com/andy-young/5f14cd5c72f57c3c87362a0dd0e9e950.js"></script>
     </div>
   </div>
 
