--- a/lessons/cat.html
+++ b/lessons/cat.html
@@ -19,12 +19,12 @@
 
   <div class="row card-panel blue-grey lighten-3">
     <div class="col s10 offset-s1">
-      <script src=""></script>
+      <script src="https://gist.github.com/andy-young/0d6129734d2bbb1ba979d01c3b36b050.js"></script>
     </div>
   </div>
 
   <ul class="pagination center-align">
-    <li class="disabled"><a href="next-steps.html"><i class="material-icons">chevron_left</i></a></li>
+    <li class="disabled"><a href="less-more.html"><i class="material-icons">chevron_left</i></a></li>
     <li class="active"><a href="setup.html">1</a></li>
     <li class="waves-effect"><a href="pwd.html">2</a></li>
     <li class="waves-effect"><a href="mkdir.html">3</a></li>
@@ -40,7 +40,7 @@
     <li class="waves-effect"><a href="rm.html">13</a></li>
     <li class="waves-effect"><a href="exit.html">14</a></li>
     <li class="waves-effect"><a href="next-steps.html">15</a></li>
-    <li class="waves-effect"><a href="pwd.html"><i class="material-icons">chevron_right</i></a></li>
+    <li class="waves-effect"><a href="rm.html"><i class="material-icons">chevron_right</i></a></li>
   </ul>
 
   <!--JavaScript at end of body for optimized loading-->
