--- a/lessons/exit.html
+++ b/lessons/exit.html
@@ -24,8 +24,8 @@
   </div>
 
   <ul class="pagination center-align">
-    <li class="disabled"><a href="rm.html"><i class="material-icons">chevron_left</i></a></li>
-    <li class="active"><a href="setup.html">1</a></li>
+    <!-- <li class="disabled"><a href="rm.html"><i class="material-icons">chevron_left</i></a></li> -->
+    <li class="waves-effect"><a href="setup.html">1</a></li>
     <li class="waves-effect"><a href="pwd.html">2</a></li>
     <li class="waves-effect"><a href="mkdir.html">3</a></li>
     <li class="waves-effect"><a href="cd.html">4</a></li>
@@ -40,7 +40,7 @@
     <li class="waves-effect"><a href="rm.html">13</a></li>
     <li class="waves-effect"><a href="exit.html">14</a></li>
     <li class="waves-effect"><a href="next-steps.html">15</a></li>
-    <li class="waves-effect"><a href="next-steps.html"><i class="material-icons">chevron_right</i></a></li>
+    <!-- <li class="waves-effect"><a href="next-steps.html"><i class="material-icons">chevron_right</i></a></li> -->
   </ul>
 
   <!--JavaScript at end of body for optimized loading-->
