Add Windows CLI Trainer to exercise pages.

--- a/lessons/ls.html
+++ b/lessons/ls.html
@@ -50,9 +50,9 @@
 <footer class="page-footer teal lighten-2">
   <div class="footer-copyright">
     <div class="container">
-      <a class="grey-text text-lighten-4 left" href="https://andy-young.github.io/CLI-First-Principles/">CLI Home</a>
-      <a class="grey-text text-lighten-4 right" href="https://andy-young.github.io/CLI-First-Principles/commands.html">CLI
-        Trainer</a>
+      <a class="grey-text text-lighten-4 left" href="../windowcmds.html" target="_blank">Windows CLI Trainer</a>
+      <a class="grey-text text-lighten-4 right" href="../commands.html" target="_blank"> Unix CLI
+Trainer</a>
     </div>
   </div>
 </footer>
