--- a/commands.html
+++ b/commands.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CLI Trainer</title>
+  <title>Unix CLI Trainer</title>
   <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
@@ -13,7 +13,7 @@
 
 <body class="bg-dark text-white ">
   <header class="bg-secondary text-center p-3 mb-5">
-    <h1>CLI Trainer</h1>
+    <h1>Unix CLI Trainer</h1>
   </header>
   <div class="container text-center">
 
