--- a/lessons/less-more.html
+++ b/lessons/less-more.html
@@ -36,7 +36,7 @@
     <li class="waves-effect"><a href="touch.html">8</a></li>
     <li class="waves-effect"><a href="cp.html">9</a></li>
     <li class="waves-effect"><a href="mv.html">10</a></li>
-    <li class="waves-effect"><a href="less-more.html">11</a></li>
+    <li class="lime accent-2 waves-effect"><a href="less-more.html">11</a></li>
     <li class="waves-effect"><a href="cat.html">12</a></li>
     <li class="waves-effect"><a href="rm.html">13</a></li>
     <li class="waves-effect"><a href="exit.html">14</a></li>
