--- a/lessons/next-steps.html
+++ b/lessons/next-steps.html
@@ -40,7 +40,7 @@
     <li class="waves-effect"><a href="cat.html">12</a></li>
     <li class="waves-effect"><a href="rm.html">13</a></li>
     <li class="waves-effect"><a href="exit.html">14</a></li>
-    <li class="waves-effect"><a href="next-steps.html">15</a></li>
+    <li class="deep-orange accent-2 waves-effect"><a href="next-steps.html">15</a></li>
     <!-- <li class="waves-effect"><a href="setup.html"><i class="material-icons">chevron_right</i></a></li> -->
   </ul>
 
