--- a/lessons/pushd-popd.html
+++ b/lessons/pushd-popd.html
@@ -32,7 +32,7 @@
     <li class="waves-effect"><a href="cd.html">4</a></li>
     <li class="waves-effect"><a href="ls.html">5</a></li>
     <li class="waves-effect"><a href="rmdir.html">6</a></li>
-    <li class="waves-effect"><a href="pushd-popd.html">7</a></li>
+    <li class="cyan accent-2 waves-effect"><a href="pushd-popd.html">7</a></li>
     <li class="waves-effect"><a href="touch.html">8</a></li>
     <li class="waves-effect"><a href="cp.html">9</a></li>
     <li class="waves-effect"><a href="mv.html">10</a></li>
