--- a/lessons/pwd.html
+++ b/lessons/pwd.html
@@ -27,7 +27,7 @@
   <ul class="pagination center-align">
     <!-- <li class="disabled"><a href="setup.html"><i class="material-icons">chevron_left</i></a></li> -->
     <li class="waves-effect"><a href="setup.html">1</a></li>
-    <li class="waves-effect"><a href="pwd.html">2</a></li>
+    <li class="purple accent-2 waves-effect"><a href="pwd.html">2</a></li>
     <li class="waves-effect"><a href="mkdir.html">3</a></li>
     <li class="waves-effect"><a href="cd.html">4</a></li>
     <li class="waves-effect"><a href="ls.html">5</a></li>
