--- a/lessons/cat.html
+++ b/lessons/cat.html
@@ -37,7 +37,7 @@
     <li class="waves-effect"><a href="cp.html">9</a></li>
     <li class="waves-effect"><a href="mv.html">10</a></li>
     <li class="waves-effect"><a href="less-more.html">11</a></li>
-    <li class="waves-effect"><a href="cat.html">12</a></li>
+    <li class="yellow accent-2 waves-effect"><a href="cat.html">12</a></li>
     <li class="waves-effect"><a href="rm.html">13</a></li>
     <li class="waves-effect"><a href="exit.html">14</a></li>
     <li class="waves-effect"><a href="next-steps.html">15</a></li>
