--- a/lessons/cd.html
+++ b/lessons/cd.html
@@ -29,7 +29,7 @@
     <li class="waves-effect"><a href="setup.html">1</a></li>
     <li class="waves-effect"><a href="pwd.html">2</a></li>
     <li class="waves-effect"><a href="mkdir.html">3</a></li>
-    <li class="waves-effect"><a href="cd.html">4</a></li>
+    <li class="indigo accent-2 waves-effect"><a href="cd.html">4</a></li>
     <li class="waves-effect"><a href="ls.html">5</a></li>
     <li class="waves-effect"><a href="rmdir.html">6</a></li>
     <li class="waves-effect"><a href="pushd-popd.html">7</a></li>
