--- a/lessons/exit.html
+++ b/lessons/exit.html
@@ -39,7 +39,7 @@
     <li class="waves-effect"><a href="less-more.html">11</a></li>
     <li class="waves-effect"><a href="cat.html">12</a></li>
     <li class="waves-effect"><a href="rm.html">13</a></li>
-    <li class="waves-effect"><a href="exit.html">14</a></li>
+    <li class="orange accent-2 waves-effect"><a href="exit.html">14</a></li>
     <li class="waves-effect"><a href="next-steps.html">15</a></li>
     <!-- <li class="waves-effect"><a href="next-steps.html"><i class="material-icons">chevron_right</i></a></li> -->
   </ul>
