--- a/lessons/mkdir.html
+++ b/lessons/mkdir.html
@@ -28,7 +28,7 @@
     <!-- <li class="disabled"><a href="pwd.html"><i class="material-icons">chevron_left</i></a></li> -->
     <li class="waves-effect"><a href="setup.html">1</a></li>
     <li class="waves-effect"><a href="pwd.html">2</a></li>
-    <li class="waves-effect"><a href="mkdir.html">3</a></li>
+    <li class="deep-purple accent-2 waves-effect"><a href="mkdir.html">3</a></li>
     <li class="waves-effect"><a href="cd.html">4</a></li>
     <li class="waves-effect"><a href="ls.html">5</a></li>
     <li class="waves-effect"><a href="rmdir.html">6</a></li>
