--- a/lessons/mv.html
+++ b/lessons/mv.html
@@ -35,7 +35,7 @@
     <li class="waves-effect"><a href="pushd-popd.html">7</a></li>
     <li class="waves-effect"><a href="touch.html">8</a></li>
     <li class="waves-effect"><a href="cp.html">9</a></li>
-    <li class="waves-effect"><a href="mv.html">10</a></li>
+    <li class="light-green accent-2 waves-effect"><a href="mv.html">10</a></li>
     <li class="waves-effect"><a href="less-more.html">11</a></li>
     <li class="waves-effect"><a href="cat.html">12</a></li>
     <li class="waves-effect"><a href="rm.html">13</a></li>
