--- a/lessons/rm.html
+++ b/lessons/rm.html
@@ -38,7 +38,7 @@
     <li class="waves-effect"><a href="mv.html">10</a></li>
     <li class="waves-effect"><a href="less-more.html">11</a></li>
     <li class="waves-effect"><a href="cat.html">12</a></li>
-    <li class="waves-effect"><a href="rm.html">13</a></li>
+    <li class="amber accent-2 waves-effect"><a href="rm.html">13</a></li>
     <li class="waves-effect"><a href="exit.html">14</a></li>
     <li class="waves-effect"><a href="next-steps.html">15</a></li>
     <!-- <li class="waves-effect"><a href="exit.html"><i class="material-icons">chevron_right</i></a></li> -->
