--- a/lessons/rmdir.html
+++ b/lessons/rmdir.html
@@ -30,7 +30,7 @@
     <li class="waves-effect"><a href="mkdir.html">3</a></li>
     <li class="waves-effect"><a href="cd.html">4</a></li>
     <li class="waves-effect"><a href="ls.html">5</a></li>
-    <li class="waves-effect"><a href="rmdir.html">6</a></li>
+    <li class="light-blue accent-2 waves-effect"><a href="rmdir.html">6</a></li>
     <li class="waves-effect"><a href="pushd-popd.html">7</a></li>
     <li class="waves-effect"><a href="touch.html">8</a></li>
     <li class="waves-effect"><a href="cp.html">9</a></li>
