--- a/lessons/setup.html
+++ b/lessons/setup.html
@@ -26,7 +26,7 @@
 
   <ul class="pagination center-align">
     <!-- <li class="disabled"><a href="next-steps.html"><i class="material-icons">chevron_left</i></a></li> -->
-    <li class="waves-effect"><a href="setup.html">1</a></li>
+    <li class="pink accent-2 waves-effect"><a href="setup.html">1</a></li>
     <li class="waves-effect"><a href="pwd.html">2</a></li>
     <li class="waves-effect"><a href="mkdir.html">3</a></li>
     <li class="waves-effect"><a href="cd.html">4</a></li>
