--- a/lessons/touch.html
+++ b/lessons/touch.html
@@ -33,7 +33,7 @@
     <li class="waves-effect"><a href="ls.html">5</a></li>
     <li class="waves-effect"><a href="rmdir.html">6</a></li>
     <li class="waves-effect"><a href="pushd-popd.html">7</a></li>
-    <li class="waves-effect"><a href="touch.html">8</a></li>
+    <li class="teal accent-2 waves-effect"><a href="touch.html">8</a></li>
     <li class="waves-effect"><a href="cp.html">9</a></li>
     <li class="waves-effect"><a href="mv.html">10</a></li>
     <li class="waves-effect"><a href="less-more.html">11</a></li>
