Widen Text Boxes on exercise pages.

--- a/lessons/cd.html
+++ b/lessons/cd.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
       <script src="https://gist.github.com/andy-young/33aa51e68e0db661e606c7d6c90ad150.js"></script>
     </div>
   </div>
