--- a/lessons/cp.html
+++ b/lessons/cp.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
         <script src="https://gist.github.com/andy-young/3254902ca38b53c9fa7adf40ed995567.js"></script>
     </div>
   </div>
