--- a/lessons/exit.html
+++ b/lessons/exit.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
         <script src="https://gist.github.com/andy-young/02c4aeb6da6a37cc960e8e9f2ff8478e.js"></script>
     </div>
   </div>
