--- a/lessons/less-more.html
+++ b/lessons/less-more.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
         <script src="https://gist.github.com/andy-young/862e681f8af9b8eac498ee1f8edcb20a.js"></script>
     </div>
   </div>
