--- a/lessons/ls.html
+++ b/lessons/ls.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
       <script src="https://gist.github.com/andy-young/dbbf8a50984c2dcb369882a7f0a9f299.js"></script>
     </div>
   </div>
