--- a/lessons/mkdir.html
+++ b/lessons/mkdir.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
       <script src="https://gist.github.com/andy-young/02b06c2342570cf2cd2b2b1476177ec6.js"></script>
     </div>
   </div>
