--- a/lessons/next-steps.html
+++ b/lessons/next-steps.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
         <script src="https://gist.github.com/andy-young/02cf35ae73b6c55902de2ae8d0ba07b1.js"></script>
     </div>
   </div>
