--- a/lessons/pushd-popd.html
+++ b/lessons/pushd-popd.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
         <script src="https://gist.github.com/andy-young/a8a2fcc2f060edd2d1e28c3055f2c585.js"></script>
     </div>
   </div>
