--- a/lessons/pwd.html
+++ b/lessons/pwd.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
         <script src="https://gist.github.com/andy-young/bb33dd923393e255ae7e1d9bfad5e1d5.js"></script>
     </div>
   </div>
