--- a/lessons/rm.html
+++ b/lessons/rm.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
         <script src="https://gist.github.com/andy-young/548371c55c05bbcf9c94dfc3bdca41dc.js"></script>
     </div>
   </div>
