--- a/lessons/rmdir.html
+++ b/lessons/rmdir.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
       <script src="https://gist.github.com/andy-young/ae0559e1b93790f7d837f8c9d2bd3f60.js"></script>
     </div>
   </div>
