--- a/lessons/cat.html
+++ b/lessons/cat.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
       <script src="https://gist.github.com/andy-young/0d6129734d2bbb1ba979d01c3b36b050.js"></script>
     </div>
   </div>
