--- a/lessons/mv.html
+++ b/lessons/mv.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
       <script src="https://gist.github.com/andy-young/1480ffb7f6464a040e5cf3e6a21d1b98.js"></script>
     </div>
   </div>
