--- a/lessons/setup.html
+++ b/lessons/setup.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row card-panel blue-grey lighten-3">
-    <div class="col s10 offset-s1">
+    <div class="col s12">
       <script src="https://gist.github.com/andy-young/7e18d6206f210ca2faeb20c50fff6bc8.js"></script>
     </div>
   </div>
